--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.css" integrity="sha512-EaaldggZt4DPKMYBa143vxXQqLq5LE29DG/0OoVenoyxDrAScYrcYcHIuxYO9YNTIQMgD8c8gIUU8FQw7WpXSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/307f30205f.js" crossorigin="anonymous"></script>
     <title>Gamer zone</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/Frame.png" alt="">
+                <h1 class="center text1"><span class="pink">G</span>amer</h1>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Developers</a></li>
+                </ul>
+                <button class="nav-btn">
+                    <span>Follow Us On</span>
+                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                    <i class="fab fa-tiktok"></i>
+                
+                </button>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
