--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
                 </button>
             </div>
         </nav>
+        <div class="banner-container">
+            <div class="banner-title">
+              <h2 class="banner-heading center">PLAY LIKE THE</h2>
+              <h1 class="color-text center">G.O.A.T.</h1>
+              <div class="banner-p">
+                <p class="text20"><i class="far fa-play-circle banner-icon"></i> 1-Click instant play</p>
+                <p class="text20"><img src="images/Frame (1).svg" class="banner-icon" alt=""> No Download</p>
+                <p class="text20"><img src="images/Frame.svg" class="banner-icon" alt=""> 1000s of supported online games</p>
+              </div>
+             
+              <div class="banner-btn">
+                <div class="btn btn1">SIGN IN</div>
+                <div class="btn btn2">GO ROGUE</div>
+              </div>
+            </div>
+            <div class="banner-img right">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </div>
     </header>
 </body>
 </html>
