video section done

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <img src="images/pngwing 4.png" alt="">
             </div>
             <div class="gamer-content">
-                <h1 class="color-text my">We are gamer</h1>
-                <p class="text18 right my">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <h1 class="color-text mb">We are gamer</h1>
+                <p class="text18 right mb">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
                  <button class="btn btn1 ">KNOW MORE</button>
                  <div class="gamer-para">
                     <span class="text18 ">Our purpose...</span>
@@ -72,5 +72,56 @@
             </div>
         </div>
     </main>
+    <section>
+        <div class="video-container">
+            <div class="title">
+                <h1 class="text1 center mb">Online Games <span class="color-text">Funny Videos</span></h1>
+                <p class="text18 center mb">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="videos-div">
+                <div class="video-card">
+                    <div class="card">
+                        <img src="images/Rectangle 4.png" alt="">
+                        <p class="text20">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="top-card">
+                        <img src="images/play-button 1.svg" alt="">
+                        <p class="text20 pink">Watch Now</p>
+                    </div>
+                </div>
+                <div class="video-card">
+                    <div class="card">
+                        <img src="images/Rectangle 5.png" alt="">
+                        <p class="text20">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="top-card">
+                        <img src="images/play-button 1.svg" alt="">
+                        <p class="text20 pink">Watch Now</p>
+                    </div>
+                </div>
+                <div class="video-card">
+                    <div class="card">
+                        <img src="images/Rectangle 6.png" alt="">
+                        <p class="text20">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="top-card">
+                        <img src="images/play-button 1.svg" alt="">
+                        <p class="text20 pink">Watch Now</p>
+                    </div>
+                </div>
+                <div class="video-card">
+                    <div class="card">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <p class="text20">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="top-card">
+                        <img src="images/play-button 1.svg" alt="">
+                        <p class="text20 pink">Watch Now</p>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
