--- a/index.html
+++ b/index.html
@@ -123,5 +123,22 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="feature-section">
+             <div class="feature-title">
+              <h1 class="text1 right"> <span class="pink">Play Instantly,</span>
+                No Downloads
+                No Installs.</h1>
+                <p class="text18 right">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+             </div>
+             <div class="feature-img">
+                <img src="images/Rectangle 55.png" alt="">
+                <div class="top-img">
+                    <img src="images/Rectangle 66.png" alt="">
+                </div>
+             </div>
+        </div>
+    </section>
+   
 </body>
 </html>
