--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
              </div>
         </div>
     </section>
-    <!-- <section>
-        <div class="feature-section">
+    <section>
+        <div class="feature-section2">
             <div class="feature-img2">
                 <img src="images/Rectangle 67.png" alt="">
                 <div class="top-img2">
@@ -148,14 +148,14 @@
                 </div>
              </div>
              <div class="feature-title2">
-              <h1 class="text1 left"> <span class="pink">Play Games</span>
+              <h1 class="text1 left mb"> <span class="pink">Play Games</span>
                 <span class="color-text">Online</span> Anywhere,
                 Anytime!</h1>
                 <p class="text18 left">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
              </div>
              
         </div>
-    </section> -->
+    </section>
    
 </body>
 </html>
