--- a/index.html
+++ b/index.html
@@ -156,6 +156,76 @@
              
         </div>
     </section>
+    <div class="games-type-container">
+        <button class="game-type">
+            <img src="images/Rectangle 11.png" alt="">
+            Action Games
+        </button>
+        <button class="game-type">
+            <img src="images/Rectangle 12.png" alt="">
+            Adventure Games
+        </button>
+        <button class="game-type">
+            <img src="images/Rectangle 13.png" alt="">
+            Arcade Games
+        </button>
+        <button class="game-type type2">
+            <img src="images/Rectangle 14.png" alt="">
+            Educational Games
+        </button>
+        <button class="game-type">
+            <img src="images/Rectangle 15.png" alt="">
+            word Games
+        </button>
+       
+        <button class="game-type type2">
+            <img src="images/Rectangle 16.png" alt="">
+            Role Palying Games
+        </button>
+        <button class="game-type type2">
+            <img src="images/Rectangle 17.png" alt="">
+           Music & Audio Games
+        </button>
+        <button class="game-type">
+            <img src="images/Rectangle 18.png" alt="">
+            Puzzle Games
+        </button>
+        <button class="game-type">
+            <img src="images/Rectangle 19.png" alt="">
+            Strategy Games
+        </button>
+    </div>
+    <footer>
+        <div class="footer-div">
+            <div class="logo">
+                <img src="images/Frame.png" alt="">
+                <h1 class="center text1"><span class="pink">G</span>amer</h1>
+            </div>
+            <div class="contact">
+                <p>Our story</p>
+                <p>Games</p>
+                <p>Web Games</p>
+                <p>Careers</p>
+                <p>Support</p>
+                <p>My Account</p>
+            </div>
+            <div class="footer-icon">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-apple" aria-hidden="true"></i>
+            </div>
+            <div class="terms">
+                <span>Terms and Conditions</span>
+                <span>Privacy Policy</span>
+                <span>Cookie Policy</span>
+                <span>Privacy Settings</span>
+            </div>
+            <span>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</span>
+        </div>
+    </footer>
    
 </body>
 </html>
