tablet responsive done

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             Strategy Games
         </button>
     </div>
-    <footer>
+    <footer class=" ">
         <div class="footer-div">
             <div class="logo">
                 <img src="images/Frame.png" alt="">
@@ -223,7 +223,7 @@
                 <span>Cookie Policy</span>
                 <span>Privacy Settings</span>
             </div>
-            <span>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</span>
+            <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</span>
         </div>
     </footer>
    
