--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.css" integrity="sha512-EaaldggZt4DPKMYBa143vxXQqLq5LE29DG/0OoVenoyxDrAScYrcYcHIuxYO9YNTIQMgD8c8gIUU8FQw7WpXSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/307f30205f.js" crossorigin="anonymous"></script>
-    <title>Gamer zone</title>
+    <title>Gamer</title>
 </head>
 <body>
     <header>
@@ -210,13 +210,13 @@
                 <p>My Account</p>
             </div>
             <div class="footer-icon">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <i class="fa fa-apple" aria-hidden="true"></i>
-            </div>
+                <a href="" class="icon"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="" class="icon"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href="" class="icon"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+                <a href="" class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="" class="icon"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="" class="icon"><i class="fa fa-apple" aria-hidden="true"></i></a>
+               </div>
             <div class="terms">
                 <span>Terms and Conditions</span>
                 <span>Privacy Policy</span>
