button hover added

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <img src="images/Rectangle 11.png" alt="">
             Action Games
         </button>
-        <button class="game-type">
+        <button class="game-type type2">
             <img src="images/Rectangle 12.png" alt="">
             Adventure Games
         </button>
