optional section added

--- a/index.html
+++ b/index.html
@@ -156,6 +156,43 @@
              
         </div>
     </section>
+    <div class="career-section">
+        <div class="career-div">
+            <div class="career-content">
+                <h1>Careers</h1>
+                <p class="career-para">
+                    Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.
+                </p>
+                <div class="career-name">
+                    <div class="left-div">
+                        <ul>
+                            <li>Multimedia Artist +</li>
+                            <li> Data Engineer +</li>
+                            <li>Adroid Engineer +</li>
+                            <li>Server Developer +</li>
+                            <li> Group Financial Accountant +</li>
+                            <li>Senior User Acuisition Specialist +</li>
+                        </ul>
+                    </div>
+                    <div class="right-div">
+                       <ul>
+                        <li>Lisbon, Portugal</li>
+                        <li>Lisbon, Portugal</li>
+                        <li>Zoetermeer, Netherlands</li>
+                        <li>Lisbon, Portugal</li>
+                        <li>London, United Kingdom</li>
+                        <li>Lisbon, Portugal</li>
+                       </ul>
+                    </div>
+                    
+                </div>
+                <button class="btn btn3">SEE ALL POSITIONS</button>
+            </div>
+            <div class="career-img">
+                <img src="images/Group 65.png" alt="">
+            </div>
+        </div>
+    </div>
     <div class="games-type-container">
         <button class="game-type">
             <img src="images/Rectangle 11.png" alt="">
